# metadata-generator

./: .gitignore  README.md  mkdocs.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: dev.agent.md  tech-analyst.agent.md
MetadataGenerator.Api/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
MetadataGenerator.Api/app/: __init__.py  main.py
MetadataGenerator.Api/app/core/: config.py  dependencies.py  exceptions.py
MetadataGenerator.Api/app/middleware/: correlation_id.py
MetadataGenerator.Api/app/models/: analysis.py  responses.py
MetadataGenerator.Api/app/routers/: audio.py  batch.py  health.py  image.py  webhook.py
MetadataGenerator.Api/app/services/: audio_speech_llm.py  content_understanding.py
MetadataGenerator.Api/app/utils/: audio_utils.py  exif_extraction.py  file_validation.py
MetadataGenerator.Api/tests/: conftest.py  test_audio_endpoint.py  test_audio_speech_llm.py  test_batch_endpoint.py  test_config.py  test_content_understanding_service.py  test_correlation_id.py  test_cors.py  test_file_utils.py  test_health.py  test_image_endpoint.py  test_models.py  test_webhook_endpoint.py
MetadataGenerator.Web/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
docs/: index.md
docs/api/: rest-api.md  webhook-api.md
docs/architecture/: azure-content-understanding-usage.md  data-flow.md  overview.md  system-design.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: deployment.md  development.md  troubleshooting.md
docs/reference/: configuration.md  environment-variables.md
scripts/: update_image_analyzer.py  validate_celebrity_identification.py
scripts/test_images/: manifest.json
site/: 404.html  index.html
site/search/: search_index.json
specs/: prd.md
specs/adr/: 0001-use-mkdocs.md  0002-azure-cu-audio-pipeline-stuck.md
specs/features/: audio-metadata-extraction.md  celebrity-person-identification.md  image-metadata-extraction.md  poc-web-application.md  (+1 more)
(+68 files in other folders)
